manifests/openframe/base/nifi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      imagePullSecrets:
        - name: github-pat-secret

      # initContainers:
      # - name: init-jmx
      #   image: busybox
      #   command:
      #     - "sh"
      #     - "-c"
      #     - "wget -O /opt/nifi/jmx_exporter/jmx_prometheus_javaagent.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/1.0.1/jmx_prometheus_javaagent-1.0.1.jar"
      #   volumeMounts:
      #   - name: jmx-exporter
      #     mountPath: /opt/nifi/jmx_exporter

      containers:
        - name: openframe-nifi
          image: openframe-nifi
          # image: apache/nifi:latest
          # command:
          #   - "sh"
          #   - "-c"
          #   - |
          #     echo "java.arg.100=-javaagent:/opt/nifi/jmx_exporter/jmx_prometheus_javaagent.jar=9096:/opt/nifi/jmx_exporter/config.yml" >> /opt/nifi/nifi-current/conf/bootstrap.conf;
          #     exec ../scripts/start.sh
          ports:
            - containerPort: 8443
              name: https
            - containerPort: 8080
              name: http
            - containerPort: 9096
              name: metrics
          volumeMounts:
            # - name: jmx-exporter
            #   mountPath: /opt/nifi/jmx_exporter
            # - name: jmx-config
            #   mountPath: /opt/nifi/jmx_exporter/config.yml
            #   subPath: config.yml
            - name: nifi-content
              mountPath: /opt/nifi/nifi-current/content_repository
            - name: nifi-database
              mountPath: /opt/nifi/nifi-current/database_repository
            - name: nifi-flowfile
              mountPath: /opt/nifi/nifi-current/flowfile_repository
            - name: nifi-provenance
              mountPath: /opt/nifi/nifi-current/provenance_repository
            - name: nifi-state
              mountPath: /opt/nifi/nifi-current/state
            - name: nifi-logs
              mountPath: /opt/nifi/nifi-current/logs
          livenessProbe:
            exec:
              command:
                - pgrep
                - java
            initialDelaySeconds: 180
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: https
            initialDelaySeconds: 180
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "2"
      volumes:
        # - name: jmx-exporter
        #   emptyDir: {}
        # - name: jmx-config
        #   configMap:
        #     name: nifi-jmx-config
        - name: nifi-content
          persistentVolumeClaim:
            claimName: nifi-content
        - name: nifi-database
          persistentVolumeClaim:
            claimName: nifi-database
        - name: nifi-flowfile
          persistentVolumeClaim:
            claimName: nifi-flowfile
        - name: nifi-provenance
          persistentVolumeClaim:
            claimName: nifi-provenance
        - name: nifi-state
          persistentVolumeClaim:
            claimName: nifi-state
        - name: nifi-logs
          persistentVolumeClaim:
            claimName: nifi-logs
