manifests/openframe/base/nifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi
  labels:
    app: nifi
spec:
  selector:
    app: nifi
  ports:
    - port: 8443
      targetPort: 8443
      name: https
    - port: 8080
      targetPort: 8080
      name: http
    - port: 9096
      targetPort: 9096
      name: metrics
  type: ClusterIP
